name:                ca
version:             0.0.0.1
synopsis:            Cellular Automata
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Neighborhood.Hex
                     , Data.Rule.Hex
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
                     , alg >=0.2.2 && <0.3
                     , util >=0.1.5 && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , GeneralizedNewtypeDeriving
