name:                ca
version:             0.0.0.1
synopsis:            Cellular Automata
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          strake888@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Neighborhood.Hex
                     , Data.Neighborhood.Moore
                     , Data.Rule.Hex
                     , Data.Rule.Moore
  -- other-modules:       
  -- other-extensions:    
  build-depends:       Fin
                     , base >=4.10 && <5
                     , alg >=0.2.2 && <0.3
                     , bitwise >=1.0.0 && <1.1
                     , largeword >=1.2
                     , peano
                     , universe-base
                     , universe-instances-base
                     , util >=0.1.9 && <0.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  UnicodeSyntax
                     , LambdaCase
                     , EmptyCase
                     , InstanceSigs
                     , PartialTypeSignatures
                     , PolyKinds
                     , ConstraintKinds
                     , FlexibleContexts
                     , FlexibleInstances
                     , MonadComprehensions
                     , StandaloneDeriving
                     , GeneralizedNewtypeDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods
                       -Wno-unticked-promoted-constructors
